# trepan3k-mathics-debugger

./: .gitignore  CHANGES.rst  ChangeLog-spell-corrected  MANIFEST.in  Makefile  README.rst  pyproject.toml  setup.cfg  setup.py
admin-tools/: make-dist.sh  pyenv-versions
trepan3k_mathics3/: __init__.py  mabort.py  mathics3.py  mbacktrace.py  mdown.py  mframe.py  mprogram.py  mup.py  printelement.py  version.py
